--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -206,6 +206,8 @@ source "drivers/hwtracing/intel_th/Kconfig"
 
 source "drivers/fpga/Kconfig"
 
+source "drivers/htc_debug/stability/Kconfig"
+
 source "drivers/firmware/Kconfig"
 
 source "drivers/bif/Kconfig"
