--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -185,3 +185,6 @@ obj-$(CONFIG_BIF)		+= bif/
 obj-$(CONFIG_SENSORS_SSC)	+= sensors/
 obj-$(CONFIG_ESOC)              += esoc/
 obj-$(CONFIG_TEE)		+= tee/
+
+# HTC debug
+obj-$(CONFIG_HTC_DEBUG)                += htc_debug/
