qcom: common_log: Add support for specifying physical address for CodeRam backup
The RPM CodeRam will be blurred while performing DDR initialization in XBL.
QCT driver allocate dynamic adress to backup CodeRam which doesn't compatible
with HTC Ramdump design. Add support for specifying physical address for
CodeRam backup.

Bug: 27549740
Bug: 27973130

Change-Id: Iaa12a0d1b523fde08a50437840bcdb889a9a5791
Signed-off-by: robin_peng <robin_peng@htc.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -261,6 +261,19 @@ config MSM_SERVICE_LOCATOR
 	  to what process domain exports the service, and which subsystem
 	  that process domain will execute in.
 
+config HTC_RAMDUMP_CODERAM_BACKUP
+	bool "Enable RPM CodeRam backup feature in HTC Ramdump Mechanism"
+	depends on MSM_COMMON_LOG
+	help
+	 RPM CodeRam will be blurred after PBL load XBL SBL1_RPM_ROM section
+	 if using QCT backup design for RPM CodeRam. Enable this CONFIG to backup
+	 RPM CodeRam data with HTC ramdump mechanism.
+
+config HTC_RAMDUMP_CODERAM_BACKUP_ADDR
+	hex "The physical address of RPM CodeRam"
+	default 0
+	depends on HTC_RAMDUMP_CODERAM_BACKUP
+
 config MSM_HVC
 	bool "MSM Hypervisor Call Support"
 	help
