gpio: add new driver for setting NC gpio pins
To setup NC(not connected) gpio pins as input pull down.

Bug: 27973130

Change-Id: I396008f975952ae151774f009af167e82dca0446
Signed-off-by: robin_peng <robin_peng@htc.com>

--- a/drivers/htc_debug/stability/Kconfig
+++ b/drivers/htc_debug/stability/Kconfig
@@ -11,3 +11,10 @@ config HTC_DEBUG_RESTART_TIMER
 	bool "add a timer in restart notifier chain"
 	default y
 	depends on HTC_DEBUG
+
+config HTC_NC_GPIO_PIN_SETTING
+	bool "HTC style nc pin setting features"
+	default n
+	depends on PINCTRL
+	help
+	  Say Y here if you want the HTC style nc pin setting features
