fs:pstore:ramoops: add new driver to append bootloader log into ramoops
Append bootloader log into ramoops for debug purpose.

Bug: 27973130

Change-Id: I6d4c7345e6bdf3384bad35d72328b4a1fb63a2e0
Signed-off-by: robin_peng <robin_peng@htc.com>

--- a/drivers/htc_debug/stability/Kconfig
+++ b/drivers/htc_debug/stability/Kconfig
@@ -34,3 +34,10 @@ config PRINTK_PID
 	help
 	  Print working process id in the dmesg as default, it can be turned
 	  off by writing 0 to module parameter pid.
+
+config HTC_DEBUG_BOOTLOADER_LOG
+	bool "HTC style ram console debug features"
+	default n
+	depends on PSTORE_CONSOLE
+	help
+	  Say Y here if you want the HTC style ram console debug features
