--- a/drivers/htc_debug/stability/Makefile
+++ b/drivers/htc_debug/stability/Makefile
@@ -2,4 +2,5 @@ ifdef CONFIG_HTC_DEBUG
 obj-$(CONFIG_HTC_REBOOT_BLOCK) += htc_reboot_block.o
 obj-$(CONFIG_HTC_DEBUG_RESTART_TIMER) += htc_restart_timer_notifier.o
 obj-$(CONFIG_HTC_NC_GPIO_PIN_SETTING)  += htc_nc_setting.o
+obj-$(CONFIG_HTC_DEBUG_BOOTLOADER_LOG) += htc_bootloader_log.o
 endif
