--- a/arch/arm64/boot/Makefile
+++ b/arch/arm64/boot/Makefile
@@ -14,7 +14,9 @@
 # Based on the ia64 boot/Makefile.
 #
 
-targets := Image Image.gz
+include $(srctree)/arch/arm64/boot/dts/htc/Makefile
+
+targets := Image Image.gz Image.lz4
 
 DTB_NAMES := $(subst $\",,$(CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES))
 ifneq ($(DTB_NAMES),)
@@ -39,13 +41,10 @@ $(obj)/Image.gz: $(obj)/Image FORCE
 $(obj)/Image.lz4: $(obj)/Image FORCE
 	$(call if_changed,lz4)
 
-$(obj)/Image.lzma: $(obj)/Image FORCE
-	$(call if_changed,lzma)
-
-$(obj)/Image.lzo: $(obj)/Image FORCE
-	$(call if_changed,lzo)
-
 $(obj)/Image.gz-dtb: $(obj)/Image.gz $(DTB_OBJS) FORCE
+	$(call if_changed,cat)
+
+$(obj)/Image.lz4-dtb: $(obj)/Image.lz4 $(DTB_OBJS) FORCE
 	$(call if_changed,cat)
 
 install: $(obj)/Image
