defconfig: Add htc_debug flags
Signed-off-by: kingbri <bdashore3@gmail.com>

--- a/arch/arm64/configs/marlin_defconfig
+++ b/arch/arm64/configs/marlin_defconfig
@@ -588,6 +588,9 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_SENSORS_SSC=y
+CONFIG_HTC_REBOOT_BLOCK=y
+CONFIG_HTC_NC_GPIO_PIN_SETTING=y
+CONFIG_HTC_DEBUG_BOOTLOADER_LOG=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
@@ -607,6 +610,8 @@ CONFIG_ECRYPT_FS_MESSAGING=y
 CONFIG_SDCARD_FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
+CONFIG_HTC_DEBUG=y
+CONFIG_HTC_DEBUG_MEM_DUMP_TABLE=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
 CONFIG_MAGIC_SYSRQ=y
