--- a/arch/arm64/configs/marlin_defconfig
+++ b/arch/arm64/configs/marlin_defconfig
@@ -526,6 +526,8 @@ CONFIG_MSM_MHI_UCI=y
 CONFIG_SEEMP_CORE=y
 CONFIG_USB_BAM=y
 CONFIG_MSM_MDSS_PLL=y
+CONFIG_HTC_RAMDUMP_CODERAM_BACKUP=y
+CONFIG_HTC_RAMDUMP_CODERAM_BACKUP_ADDR=0x83C20000
 CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
 CONFIG_ARM_SMMU=y
