--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -1,7 +1,6 @@
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
 dtbo-$(CONFIG_ARCH_MSM8996) += \
 	msm8996-mtp-overlay.dtbo \
-	msm8996-cdp-overlay.dtbo \
 	apq8096pro-v1.1-auto-adp-overlay.dtbo \
 	apq8096pro-v1.1-auto-adp-lite-overlay.dtbo \
 	msm8996pro-auto-adp-overlay.dtbo \
@@ -11,13 +10,7 @@ dtbo-$(CONFIG_ARCH_MSM8996) += \
 
 msm8996-mtp-overlay.dtbo-base :=  msm8996pro-v1.1-pmi8996.dtb \
 				msm8996-v3-pmi8996.dtb \
-				msm8996pro-v1.1-pmi8994.dtb \
-				msm8996-v313-pmi8994.dtb \
-				msm8996-v30-pm8994-pmi8994-pm8004.dtb
-
-msm8996-cdp-overlay.dtbo-base :=  msm8996-v3-pmi8994.dtb \
-				 msm8996pro-pmi8994-pm8004.dtb
-
+				msm8996pro-v1.1-pmi8994.dtb
 apq8096pro-v1.1-auto-adp-overlay.dtbo-base := apq8096pro-v1.1-auto.dtb
 apq8096pro-v1.1-auto-adp-lite-overlay.dtbo-base := apq8096pro-v1.1-auto.dtb
 msm8996pro-auto-adp-overlay.dtbo-base := msm8996pro-auto.dtb
