Revert "ARM: dts: msm: add DTBO support for APQ ADP board"
This reverts commit 5e3a0c31b88f212547c8228e67cc5d124c5efaf5.

--- a/arch/arm/boot/dts/qcom/msm8996-auto.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-auto.dtsi
@@ -10,7 +10,7 @@
  * GNU General Public License for more details.
  */
 
-&android_vendor {
+&vendor {
 	fsmgr_flags = "wait,slotselect,verify";
 };
 
