marlin_defconfig: enable pstore, ftrace and htc bl log

--- a/arch/arm64/configs/marlin_defconfig
+++ b/arch/arm64/configs/marlin_defconfig
@@ -599,6 +599,7 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_HTC_REBOOT_BLOCK=y
 CONFIG_HTC_NC_GPIO_PIN_SETTING=y
+CONFIG_HTC_DEBUG_BOOTLOADER_LOG=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_SENSORS_SSC=y
 CONFIG_EXT4_FS=y
@@ -619,6 +620,11 @@ CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
 CONFIG_SDCARD_FS=y
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_PMSG=y
+CONFIG_PSTORE_FTRACE=y
+CONFIG_PSTORE_RAM=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_HTC_DEBUG=y
@@ -636,6 +642,7 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_IPC_LOGGING=y
+CONFIG_FUNCTION_TRACER=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_DEBUG_ALIGN_RODATA=y
