--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -263,7 +263,7 @@ config MSM_SERVICE_LOCATOR
 
 config HTC_RAMDUMP_CODERAM_BACKUP
 	bool "Enable RPM CodeRam backup feature in HTC Ramdump Mechanism"
-	depends on MSM_COMMON_LOG
+	depends on QCOM_COMMON_LOG
 	help
 	 RPM CodeRam will be blurred after PBL load XBL SBL1_RPM_ROM section
 	 if using QCT backup design for RPM CodeRam. Enable this CONFIG to backup
